# deepseek-balance-applet

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  justfile  rustfmt.toml  uninstall.sh
.github/workflows/: ci.yml  release.yml
.zed/: settings.json
i18n/en/: deepseek_balance_applet.ftl
i18n/ru/: deepseek_balance_applet.ftl
resources/: app.desktop  app.metainfo.xml
src/: api.rs  app.rs  config.rs  i18n.rs  main.rs
