[package]
name = "deepseek-balance-applet"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0 (Mozilla Public License 2.0)"
description = "DeepSeek balance monitor for COSMIC desktop"
repository = "https://github.com/serhio/deepseek-balance-applet"

[dependencies]
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }
chrono = { version = "0.4", features = ["clock"], default-features = false }
i18n-embed-fl = "0.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rust-embed = "8.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Applet support
    "applet",
    "applet-token",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Add Wayland support to winit
    "wayland",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
